# eigen-zkvm

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  package.json  rust-toolchain  rust-toolchain.toml
SM/: Cargo.toml  README.md  package.json
SM/circuits/: circuit.circom  circuit.public.info.json  circuit.zkin.json
SM/pil/: basic_main.pil  keccakf.pil  main.pil  mem.pil  mem_align.pil  nine2one.pil  norm_gate9.pil  padding_kk.pil  padding_kkbit.pil  padding_pg.pil  poseidong.pil  rom.pil  storage.pil
SM/src/: .env.example  db.js  db_test.js  generate_tx.js  lib.rs  main.js  smt.js  smt_test.js  vm.js
SM/src/sm/: sm_binary.js  sm_byte4.js  sm_global.js  sm_mem.js  sm_mem_align.js  sm_nine2one.js  sm_norm_gate9.js  sm_padding_kk.js  sm_padding_pg.js  sm_poseidong.js  sm_rom.js
SM/tools/: dbhandler.js  gen_debug_starkstruct.js  gen_final_proof.sh  setup.sh  zkvm.c12.starkstruct.json
SM/tools/build-genesis/: build_genesis.js  input_executor.json  input_gen.json
SM/tools/gen-input-executor/: .gitignore  README.md  gen-txs.js  helpers.js  run-gen-txs.js  txs.json
algebraic/: Cargo.toml
algebraic-gpu/: Cargo.toml
algebraic-gpu/src/: circom_circuit.rs  lib.rs  r1cs_file.rs  reader.rs
algebraic-gpu/src/witness/: circom.rs  witness_calculator.rs
algebraic-gpu/test-vectors/: mycircuit-input3.json  mycircuit.circom
algebraic/src/: circom_circuit.rs  errors.rs  field_gl.rs  field_gl_test.rs  lib.rs  packed.rs  r1cs_file.rs  r1cs_reader.rs  reader.rs  utils.rs
algebraic/src/circom_witness/: mod.rs  utils.rs  wasm.rs
algebraic/src/r1cs/: constraint.rs  custom_gate.rs  header.rs  mod.rs  r1cs_file.rs  utils.rs
algebraic/src/r1cs_file/: constraint.rs  custom_gate.rs
algebraic/src/r1cs_witness/: mod.rs  witness_calculator.rs
algebraic/src/witness/: circom.rs  memory.rs  mod.rs  witness_calculator.rs
algebraic/test-vectors/: mycircuit.wasm  mycircuit_bls12381.r1cs  mycircuit_bls12381.wasm
dsl_compile/: Cargo.toml
dsl_compile/src/: circom_circuit.rs  compilation_user.rs  errors.rs  execution_user.rs  input_user.rs  lib.rs  parser_user.rs  r1cs_file.rs  reader.rs  type_analysis_user.rs
dsl_compile/src/witness/: mod.rs  witness_calculator.rs
dsl_compile/test-vectors/: mycircuit-input2.json
fields/: Cargo.toml
fields/src/: field_gl.rs  field_gl_test.rs  lib.rs  packable.rs  packed.rs
groth16/: Cargo.toml  README.md
groth16/src/: api.rs  circuit.rs  groth16.rs  json_export.rs  json_utils.rs  lib.rs  r1cs_file.rs  reader.rs  snark.rs  template.rs
groth16/test-vectors/: proof.json  public_input.json  verification_key.json  verification_key_bls12381.json
plonky/: Cargo.toml  README.md
plonky/src/: aggregation.rs  api.rs  circom_circuit.rs  circom_tester.rs  errors.rs  field_gl.rs  field_gl_test.rs  groth16.rs  lib.rs  plonk.rs  r1cs_file.rs  reader.rs  recursive.rs  scalar_gl.rs  scalar_gl_tests.rs  snark.rs  tests.rs  utils.rs
plonky/src/verifier/: recursive_plonk_verifier.rs
plonky/src/witness/: circom.rs  memory.rs  mod.rs  witness_calculator.rs
plonky/test-vectors/: prove.sh
recursion/: Cargo.toml
recursion-gnark/ffi/: Cargo.toml  build.rs
recursion-gnark/ffi/data/: groth16_vk_bls12381.json  proof_bls12381.json  public_inputs.json  public_inputs_bls12381.json
recursion-gnark/ffi/go/: go.mod  go.sum  main.go
recursion-gnark/ffi/src/: json_util.rs  lib.rs  traits.rs  verifier.rs
recursion/data/: fib2.pil.json
recursion/src/: io_utils.rs  lib.rs  pilcom.rs  r1cs2plonk.rs
recursion/src/compressor12/: compressor12_exec.rs  compressor12_pil.rs  compressor12_setup.rs  plonk_setup.rs
recursion/src/pilcom/: export.rs  expression_counter.rs
starky/: Cargo.toml  README.md  build.rs  render_pil_rs.pil  test_pols_array.json  test_write_and_read_exec_file.txt  vec_data.txt
starky/benches/: batch_inverse.rs  fft.rs  merklehash.rs  perf.rs  poseidon.rs
starky/data/: arrays.pil.json  c12.starkStruct.bls12381.json  c12.starkStruct.bn128.json  c12.starkStruct.json  connection.cm  connection.const  connection.pil.json  fib.cm.gl  fib.const  fib.const.gl  fib.exec  fib.exec.cp  fib.pil.json  fib.pil.json.2  fib.pil.json.gl  final.starkStruct.bls12381.json  final.starkStruct.bn128.json  pe.cm  pe.const  pe.pil.json  plookup.cm.gl  plookup.const.gl  plookup.pil.json.gl  r1.starkStruct.bn128.json  r1.starkStruct.json  r2.starkStruct.bls12381.json  r2.starkStruct.bn128.json  r2.starkStruct.json  recursive.starkstruct.json  recursivef.starkstruct.json  starkStruct.json  starkStruct.json.bls12381  starkStruct.json.gl
starky/src/: constant.rs  deserializer.rs  dev.rs  digest.rs  digest_bn128.rs  errors.rs  expressionops.rs  f3g.rs  f5g.rs  fft.rs  fft_p.rs  fft_worker.rs  field_bls12381.rs  field_bn128.rs  fri.rs  helper.rs  interpreter.rs  io_utils.rs  lib.rs  linearhash.rs  linearhash_bls12381.rs  linearhash_bn128.rs  matrix.rs  mds.rs  merklehash.rs  merklehash_bls12381.rs  merklehash_bn128.rs  pil.rs  pil2circom.rs  pilcom.rs  polsarray.rs  polutils.rs  poseidon_bls12381.rs  poseidon_bls12381_constants.rs  poseidon_bls12381_constants_opt.rs  poseidon_bls12381_opt.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs  poseidon_bn128_constants_opt.rs  poseidon_bn128_opt.rs  (+33 more)
starky/src/compressor12/: compressor12_exec.rs  compressor12_pil.rs  compressor12_setup.rs  constants.rs  mod.rs  plonk_setup.rs
starky/src/pilcom/: export.rs  expression_counter.rs
starky/src/utils/: mod.rs  parallells.rs
test/regression/: Cargo.toml
test/regression/src/: lib.rs  main.rs
zkgevulot/verifier/: Cargo.toml  README.md
zkgevulot/verifier/src/: main.rs
zkit/: Cargo.toml  README.md
zkit/src/: compilation_user.rs  execution_user.rs  groth16_api.rs  input_user.rs  lib.rs  main.rs  parser_user.rs  stark.rs  utils.rs
zkit/tests/: bottom_layer.rs
zklib/: Cargo.toml
zklib/src/: api.rs  circom_circuit.rs  lib.rs  r1cs_file.rs  reader.rs  recursive.rs  tests.rs  transpile.rs
zkvm/: Cargo.toml  README.md
zkvm/examples/: block_traces.rs
zkvm/src/: lib.rs
zkvm/test-vectors/: blockInfo.json  reth.block.json  solidityExample.json
(+280 files in other folders)
