[package]
name = "EigenZKit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
# bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git" }
recurisive_vk_codegen = { package = "recursive_aggregation_circuit", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git" }
byteorder = "1"
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io
env_logger = "0.8.2"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "multicore", "plonk" ] }

hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
rand = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

