[package]
name = "algebraic-gpu"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Algebraic based on R1CS"
documentation = "eigen.market"
homepage = "eigen.market"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
hex = "*"
wasmer = { version = "4.3.5", default-features = false }
thiserror = "1.0"
anyhow = "1.0.79"
fnv = { version = "1.0.3", default-features = false }
num = { version = "0.4.0" }
byteorder = "1"

ff = { version = "0.13.0", features = ["derive"] }
pairing = "0.23.0"
bellperson = { version = "0.26", default-features = false, features = ["groth16"] }
rand = "0.8.5"

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["bellperson/default", "wasmer/singlepass"]
cuda = ["bellperson/cuda", "wasmer/singlepass"]
opencl = ["bellperson/opencl", "wasmer/singlepass"]
