[package]
name = "fields"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.1"
itertools = "0.8.1"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = [ "derive" ] }
hex = "*"
byteorder = "1"
# ff = {package = "ff_ce", version = "0.12.*", features = ["derive"]}
ff = { version = "0.13.0", features = ["derive"] }

# rand = "0.4"
rand = "0.8"
rand_core = "0.6"

# error and log
anyhow = "1.0.79"
log = "0.4.0"
env_logger = "0.10"

[dev-dependencies]
serde_json = "1.0"


[features]
default = []
avx2 = []
avx512 = []
