[package]
name = "groth16"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "plonk" ], version = "0.0.5"}
#franklin-crypto = { path = "../../franklin-crypto", features = [ "plonk" ], version = "0.0.5"}
zokrates_proof_systems = { git = "https://github.com/Zokrates/ZoKrates", branch = "develop", package = "zokrates_proof_systems"}

hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
hex = "*"
thiserror="1.0"
fnv = { version = "1.0.3", default-features = false }
num = { version = "0.4.0" }
algebraic = { path = "../algebraic", default-features=false }
rand = "0.4"
anyhow = "1.0.79"
regex = "0.2"

profiler_macro = {git = "https://github.com/ChengYueJia/profiler-rs", rev = "6d6a77f8"}
ark-std = { version = "0.4.0", optional = true }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["franklin-crypto/multicore", "algebraic/default"]
profiler = ["ark-std/print-trace"]