[package]
name = "groth16"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"

hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
hex = "*"
thiserror="1.0"
fnv = { version = "1.0.3", default-features = false }
num = { version = "0.4.0" }

anyhow = "1.0.79"
regex = "0.2"

profiler_macro = {git = "https://github.com/ChengYueJia/profiler-rs", rev = "6d6a77f8"}
ark-std = { version = "0.4.0", optional = true }

ff = { version = "0.13.0", features = ["derive"] }
pairing = "0.23.0"
group = "0.13.0"
blstrs = { version = "0.7.0", features = ["__private_bench"] }
bellperson = { version = "0.25", default-features = false }
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
wasmer = { version = "4.3.2", default-features = false }

[dev-dependencies]
env_logger = "0.10"

#[target.'cfg(not(any(feature = "cuda", feature = "opencl")))'.dependencies]
#franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "plonk" ], version = "0.0.5"}
#franklin-crypto = { path = "../../franklin-crypto", features = [ "plonk" ], version = "0.0.5"}
#[target.'cfg(not(any(feature = "cuda", feature = "opencl")))'.dependencies]
#algebraic = { path = "../algebraic", default-features=false }
#[target.'cfg(not(any(feature = "cuda", feature = "opencl")))'.dependencies]
#rand = "0.4"

[features]
#default = ["franklin-crypto/multicore", "algebraic/default"]
default = ["bellperson/default", "wasmer/singlepass"]
profiler = ["ark-std/print-trace"]
cuda = []
opencl = []