[package]
name = "recursion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
proptest = "1.1"
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
hex = "*"
wasmer = { version = "4.3.5", default-features = false }
thiserror="1.0"
anyhow = "1.0.79"
fnv = { version = "1.0.3", default-features = false }
num = { version = "0.4.0" }
byteorder = "1"
ff = {package="ff_ce" , version="0.12", features = ["derive"]}
fields = { path = "../fields", default-features = false }
starky = { path = "../starky", default-features = false }
algebraic = { path = "../algebraic", default-features = false }

powdr-ast = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-ast", default-features = false }
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-number", default-features = false }
powdr-pil-analyzer = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-pil-analyzer", default-features = false }
powdr-parser-util = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-parser-util", default-features = false }

#powdr =              { path = "../../powdr/powdr", default-features = false }
#powdr-ast =          { path = "../../powdr/ast", default-features = false }
#powdr-pil-analyzer = { path = "../../powdr/pil-analyzer", default-features = false }
#powdr-parser-util  = { path = "../../powdr/parser-util", default-features = false }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["wasmer/singlepass", "starky/default"]
avx512 = ["fields/avx512", "starky/avx512"]
