[package]
name = "starky"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# serialization
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# hash
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
lazy_static = "1.0"

## threading
rayon = { version = "1.5"}
num_cpus = "1.0"

# error and log
thiserror="1.0"
log = "0.4.0"
env_logger = "0.10"

# R1CS and Goldilocks
plonky = { package="plonky", path = "../plonky", version = "0.0.2" }

#powdr pil compile tool
pil_analyzer = {git = "https://github.com/powdr-labs/powdr.git",branch = "stark-via-eigen", package = "pil_analyzer"}
number = {git = "https://github.com/powdr-labs/powdr.git", branch = "stark-via-eigen", package = "number"}
ast = {git = "https://github.com/powdr-labs/powdr.git", branch = "stark-via-eigen", package = "ast"}


[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.3", features = ["flamegraph"] }
env_logger = "0.10"

[[bench]]
name = "merklehash"
harness = false
