[package]
name = "starky"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
array_tool = "1.0.3"

# serialization
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
byteorder = "1"

# hash
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
lazy_static = "1.0"

## threading
rayon = { version = "1.5"}
num_cpus = "1.0"

# error and log
thiserror="1.0"
log = "0.4.0"

# R1CS and Goldilocks
plonky = { package="plonky", path = "../plonky", version = "0.0.2" }
algebraic = { path = "../algebraic" }

#powdr pil compile tool. branch = "main"
pil_analyzer = {git = "https://github.com/powdr-labs/powdr.git", rev = "eb593dee15e194bd066085022f8a6ea52e2dab9b", package = "pil_analyzer"}
number = {git = "https://github.com/powdr-labs/powdr.git", rev = "eb593dee15e194bd066085022f8a6ea52e2dab9b", package = "number"}
ast = {git = "https://github.com/powdr-labs/powdr.git",   rev = "eb593dee15e194bd066085022f8a6ea52e2dab9b",package = "ast"}

profiler_macro = {git = "ssh://git@github.com/ChengYueJia/profile-rs.git", branch = "feat/macro"}
ark-std = { version = "0.4.0", optional = true }

[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.3", features = ["flamegraph"] }
env_logger = "0.10"
ark-std = {version = "0.4.0", features = ["print-trace"]}

[features]
profiler = ["ark-std/print-trace"]


[[bench]]
name = "merklehash"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "batch_inverse"
harness = false

[[bench]]
name = "poseidon"
harness = false