[package]
name = "starky"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# serialization
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
byteorder = "1"

# hash
# ff = {package="ff_ce" , version="0.12", features = ["derive"]}
# rand = "0.4"
ff = { version = "0.13.0", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"

lazy_static = "1.0"

## threading
rayon = { version = "1.5"}
num_cpus = "1.0"
hashbrown = { version = "0.14.3", features = ["rayon"] }

# error and log
anyhow = "1.0.79"
log = "0.4.0"

# R1CS and Goldilocks
fields = { path = "../fields", default-features=false }

profiler_macro = {git = "https://github.com/ChengYueJia/profiler-rs", rev = "6d6a77f8"}
ark-std = { version = "0.4.0", optional = true }

[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.3", features = ["flamegraph"] }
env_logger = "0.10"
ark-std = {version = "0.4.0", features = ["print-trace"]}


[[bench]]
name = "merklehash"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "batch_inverse"
harness = false

[[bench]]
name = "poseidon"
harness = false

[features]
default = []
avx512 = ["fields/avx512"]
profiler = ["ark-std/print-trace"]
