[package]
name = "zkit"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Eigen ZKit command tools"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { package="plonky", path = "../plonky", version = "0.0.1" }
starky = { package="starky", path = "../starky", version = "0.0.1" }
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io

ansi_term = "0.12.1"
wast = "39.0.0"
anyhow = "1.0.34"
#thiserror = "1.0.33"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

## from circom
parser = { git = "https://github.com/iden3/circom.git", version = "2.1.1" }
program_structure = { git = "https://github.com/iden3/circom.git", version = "2.1.1" }
type_analysis = { git = "https://github.com/iden3/circom.git", version = "2.1.0"}
constraint_generation = { git = "https://github.com/iden3/circom.git", version = "2.1.1" }
constraint_writers = { git = "https://github.com/iden3/circom.git", version = "2.0.9"}
compiler = { git = "https://github.com/iden3/circom.git", version = "2.1.2"}
dag = { git = "https://github.com/iden3/circom.git", version = "2.0.9"}
