[package]
name = "eigen-zkit"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Eigen ZKit command tools"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { package="plonky", path = "../plonky", version = "0.0.2" }
starky = { package="starky", path = "../starky", version = "0.0.1" }
clap = { package = "clap", version = "4.3.4", features = ["derive"] }

ansi_term = "0.12.1"
wast = "39.0.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
env_logger = "0.10"

## from circom
parser = { git = "https://github.com/iden3/circom.git", version = "2.1.6" }
program_structure = { git = "https://github.com/iden3/circom.git", version = "2.1.6" }
type_analysis = { git = "https://github.com/iden3/circom.git", version = "2.1.5"}
constraint_generation = { git = "https://github.com/iden3/circom.git", version = "2.1.6" }
constraint_writers = { git = "https://github.com/iden3/circom.git", version = "2.1.5"}
compiler = { git = "https://github.com/iden3/circom.git", version = "2.1.6"}
dag = { git = "https://github.com/iden3/circom.git", version = "2.1.5"}

[features]
default = [ "build" ]
build = [ "starky/build" ]
eval = [ "starky/eval" ]
