[package]
name = "eigen-zkit"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Eigen ZKit command tools"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { package="plonky", path = "../plonky", version = "0.0.2" }
starky = { package="starky", path = "../starky", version = "0.0.1" }
dsl_compile = { package="dsl_compile", path = "../dsl_compile"}
clap = { package = "clap", version = "4.3.4", features = ["derive"] }

# error and log
log = "0.4.0"
env_logger = "0.10"