[package]
name = "zklib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen ZKit Library"
documentation = "eigen.cash"
homepage = "eigen.cash"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bellman_vk_codegen = { git = "https://github.com/0xEigenLabs/solidity_plonk_verifier.git", version = "0.2.0", features = [ "multicore" ] }
recursive_aggregation_circuit = { package = "recursive_aggregation_circuit", git = "https://github.com/matter-labs/recursive_aggregation_circuit.git", version = "1.0.0"}
byteorder = "1"
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io
env_logger = "0.8.2"
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "multicore", "plonk" ], version = "0.0.5"}

hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.3.3"
num-traits = "0.2.8"
rand = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

handlebars = "3.*"
hex = "*"
ethabi = "14"
