[package]
name = "zkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
# serialization
log = "0.4.0"

#powdr-backend =        { git = "https://github.com/powdr-labs/powdr", rev = "97ea8d0" }
#powdr-pipeline =       { git = "https://github.com/powdr-labs/powdr", rev = "97ea8d0" }
#powdr-riscv =          { git = "https://github.com/powdr-labs/powdr", rev = "97ea8d0" }
#powdr-riscv-executor = { git = "https://github.com/powdr-labs/powdr", rev = "97ea8d0" }
#powdr-number =         { git = "https://github.com/powdr-labs/powdr", rev = "97ea8d0" }

powdr-backend =        { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-pipeline =       { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-riscv =          { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-riscv-executor = { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-number =         { git = "https://github.com/eigmax/powdr", branch = "main" }

hex = "0.4.3"
thiserror = "1.0"
serde_json = "1.0.108"
anyhow = "1.0.79"

[dev-dependencies]
env_logger = "0.10"
num-traits = "0.2.17"
