[package]
name = "zkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
# serialization
log = "0.4.0"

powdr-number = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-number", default-features = false }
powdr-backend = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-backend", default-features = false, features = ["estark-starky"] }
powdr-executor = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-executor", default-features = false }
powdr-riscv = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-riscv", default-features = false }
powdr-pipeline = { git = "https://github.com/powdr-labs/powdr.git", branch = "main", package = "powdr-pipeline", default-features = false, features = ["estark-starky"] }

#powdr =              { path = "../../powdr/powdr", default-features = false }
starky =         { path = "../starky" }
recursion =  { path = "../recursion" }

hex = "0.4.3"
thiserror = "1.0"
serde_json = "1.0.108"
anyhow = "1.0.79"
bincode = "1.3.3"

[dev-dependencies]
env_logger = "0.10"
num-traits = "0.2.17"

[features]
default = []
avx512 = ["starky/avx512", "recursion/avx512", "powdr-pipeline/estark-starky-simd", "powdr-backend/estark-starky-simd"]
