[package]
name = "recursion-gnark-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
p3-field =  "=0.2.0-succinct"
p3-symmetric =  "=0.2.0-succinct"
p3-baby-bear = { version =  "=0.2.0-succinct", features = ["nightly-features"] }
sp1-recursion-compiler = { git = "https://github.com/succinctlabs/sp1.git", version = "4.1.0", rev = "87d435a52d795ea2c9acb0a347b410a60d27776f" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1.git", version = "4.1.0", rev = "87d435a52d795ea2c9acb0a347b410a60d27776f" }
sp1-stark = { git = "https://github.com/succinctlabs/sp1.git", version = "4.1.0", rev = "87d435a52d795ea2c9acb0a347b410a60d27776f" }
serde = "1.0.204"
serde_json = "1.0.132"
tempfile = "3.10.1"
log = "0.4.22"
num-bigint = "0.4.6"
cfg-if = "1.0"
bincode = "1.3.3"
anyhow = "1.0.86"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1"
cfg-if = "1.0"

[features]
native = []
