[package]
name = "recursion-gnark-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
log = "0.4.22"
num-bigint = "0.4.6"
cfg-if = "1.0"
bincode = "1.3.3"
anyhow = "1.0.86"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1"
cfg-if = "1.0"

[features]
