[package]
name = "regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = {git = "https://github.com/powdr-labs/powdr.git", package = "riscv"}
number = {git = "https://github.com/powdr-labs/powdr.git", package = "number"}

[workspace]