[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powdr-riscv-runtime = { git = "https://github.com/0xEigenLabs/powdr", branch = "eigen/v1" }

bn = { version = "0.6.0", package = "substrate-bn-succinct" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }

# arkworks
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-groth16 = { version = "0.4.0", default-features = false, features = ["r1cs"] }
ark-ec = { version = "0.4.0" }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0" }

[workspace]
