[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
powdr-riscv-runtime = { git = "https://github.com/0xEigenLabs/powdr", branch = "eigen/v1" }
models = { git = "https://github.com/eigmax/powdr-revme", branch = "continuations", package = "models" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }

[workspace]
